k8s/manifests/subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription
  namespace: sns
  labels:
    app: subscription
spec:
  selector:
    matchLabels:
      app: subscription
  replicas: 1
  template:
    metadata:
      labels:
        app: subscription
    spec:
      serviceAccountName: appuser
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
        runAsNonRoot: true
        runAsGroup: 1001
      containers:
        - name: subscription
          image: sns-subscription:latest
          ports:
            - containerPort: 3001
          imagePullPolicy: "Never"
          resources:
            requests:
              cpu: 100m
              memory: 40Mi
            limits:
              cpu: 250m
              memory: 50Mi
          livenessProbe:
            httpGet:
              path: /probes/liveness
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 45
          readinessProbe:
            httpGet:
              path: /probes/readiness
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 45
          volumeMounts:
            - name: config
              mountPath: "opt/sns/app/config"
              subPath: "config.production.json"
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
      volumes:
        - name: config
          configMap:
            name: sns-config
---
apiVersion: v1
kind: Service
metadata:
  name: subscription
  namespace: sns
  labels:
    app: subscription
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: subscription
  type: ClusterIP
