k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sns
  namespace: sns
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
    - hosts:
        - ingress-nginx-controller-65cf89dc4f-fj9xd
      secretName: ingress-tls
  rules:
    - http:
        paths:
          - path: /api/payment-methods
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 3000
          - path: /api/subscriptions
            pathType: Prefix
            backend:
              service:
                name: subscription
                port:
                  number: 3001
